# metal-rust-template

./: Cargo.toml  README.md  memory.x
.cargo/: config
src/: main.rs
